[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/Base/AntennaLight.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Base/Base.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Base/BaseDrill copy.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Base/BaseShadow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Base/SatelliteLight.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Base/YellowLight.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Base/DrillLight.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Base/BaseBack.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Characters/Base/DrillLight.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Characters/Base/DrillParticles2D.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Turrets/HealthDisplay/TurretHealthFill.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Turrets/HealthDisplay/TurretHealthRect.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Base/Base copy.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.1775, 9.20211 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.5694, 12.41 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 26, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 104, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 130, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 182, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 234, 0, 26, 49 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.133333, 0.377778, 0.688889, 1 )
colors = PoolColorArray( 0.721569, 0.666667, 0.901961, 0, 0.712927, 0.658533, 0.891286, 1, 0.654902, 0.603922, 0.819608, 1, 0.708871, 0.654715, 0.886275, 1, 0.282353, 0.266667, 0.341176, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 0.541712 ), 0.0, 0.0, 0, 0, Vector2( 0.245283, 0.820991 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 55.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 17 )
color_ramp = SubResource( 15 )

[sub_resource type="CanvasItemMaterial" id=19]
blend_mode = 1

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[node name="Base" type="StaticBody2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.43619, -3.76488 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( -6.33333, -5.70529 )
shape = SubResource( 2 )

[node name="BaseBack" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
z_index = -1
texture = ExtResource( 8 )

[node name="Drill" type="Node2D" parent="."]
position = Vector2( 29, -25 )
z_index = -1

[node name="Drill" type="AnimatedSprite" parent="Drill"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 13 )
frame = 7
playing = true

[node name="DrillLight" type="Sprite" parent="Drill"]
modulate = Color( 2, 1.2, 1, 1 )
position = Vector2( -1.90735e-06, 0.382814 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
script = ExtResource( 9 )

[node name="DrillLightTween" type="Tween" parent="Drill/DrillLight"]

[node name="DrillParticles2D" type="Particles2D" parent="Drill"]
position = Vector2( 0.5, 16 )
emitting = false
amount = 12
lifetime = 2.0
preprocess = 0.2
speed_scale = 2.0
explosiveness = 0.2
process_material = SubResource( 18 )
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Drill/DrillParticles2D"]
wait_time = 3.0
one_shot = true

[node name="BaseSprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 13 )

[node name="BaseShadow" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
z_index = -1
texture = ExtResource( 4 )

[node name="AntennaLight" type="Sprite" parent="."]
modulate = Color( 4, 1.5, 1, 1 )
position = Vector2( -0.0427628, 0 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="SatteliteLight" type="Sprite" parent="."]
modulate = Color( 3.5, 1.2, 1, 1 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="YellowLight" type="Sprite" parent="."]
modulate = Color( 1.8, 1.8, 1, 1 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="AntennaTween" type="Tween" parent="."]

[node name="DrillTween" type="Tween" parent="."]

[node name="HealthBarTextureProgress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -52.0
margin_right = 25.0
margin_bottom = -44.0
value = 100.0
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -43.0
margin_right = 44.0
margin_bottom = 7.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseButton" type="Button" parent="Control"]
material = SubResource( 19 )
margin_right = 73.0
margin_bottom = 49.0
focus_mode = 0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_all_completed" from="Drill/DrillLight/DrillLightTween" to="Drill/DrillLight" method="_on_DrillLightTween_tween_all_completed"]
[connection signal="timeout" from="Drill/DrillParticles2D/Timer" to="Drill/DrillParticles2D" method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="AntennaTween" to="." method="_on_AntennaTween_tween_all_completed"]
[connection signal="tween_all_completed" from="DrillTween" to="." method="_on_DrillTween_tween_all_completed"]
[connection signal="mouse_entered" from="Control/BaseButton" to="." method="_on_BaseButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/BaseButton" to="." method="_on_BaseButton_mouse_exited"]
[connection signal="toggled" from="Control/BaseButton" to="." method="_on_BaseButton_toggled"]
